--- a/templates/contact.html
+++ b/templates/contact.html
@@ -81,6 +81,9 @@
             display: none;
         }
     }
+	ul li{
+		font-family: 'Josefin Sans', sans-serif !important;
+	}
 </style>
 </head>
 
@@ -161,8 +164,8 @@ End Fixed Navigation
         <!-- section title -->
         <div class="col-12">
           <div class="title text-center">
-            <h2 class="text-light">Get In Touch</h2>
-            <p class="text-light">We’re happy to hear from you. Contact us today to learn more about us and how you can benefit from working with us.</p>
+            <h2 class="text-light" style="font-family: 'Josefin Sans', sans-serif !important;">Get In Touch</h2>
+            <p class="text-light" style="font-family: 'Josefin Sans', sans-serif !important;">We’re happy to hear from you. Contact us today to learn more about us and how you can benefit from working with us.</p>
             <div class="border"></div>
           </div>
         </div>
@@ -181,14 +184,14 @@ End Fixed Navigation
 
         <!-- Contact Details -->
         <div class="contact-details col-md-12 ">
-          <h3>Contact Details</h3>
+          <h3 style="font-family: 'Josefin Sans', sans-serif !important;">Contact Details</h3>
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore adipisci.</p> -->
           <ul class="contact-short-info">
             <li>
 				<i class="tf-ion-ios-home">Indore-Address: <br></i>
-			  <span> 615, Apollo Premier, Vijay Nagar Sqaure, Indore, Madhya pradesh, India, 452001</span><br>
+			  <span style="font-family: 'Josefin Sans', sans-serif !important;"> 615, Apollo Premier, Vijay Nagar Sqaure, Indore, Madhya pradesh, India, 452001</span><br>
 			  <i class="tf-ion-ios-home">Hyderabad-Address: <br></i>
-			  <span>2nd Floor, Adviti NIvas PLOT - 26, near RTO Office, Chandragiri Colony, Trimulgherry, Secunderabad, Telangana 500015</span>
+			  <span style="font-family: 'Josefin Sans', sans-serif !important;">2nd Floor, Adviti NIvas PLOT - 26, near RTO Office, Chandragiri Colony, Trimulgherry, Secunderabad, Telangana 500015</span>
             </li>
             <li>
               <i class="tf-ion-android-phone-portrait"></i>
