--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -25,21 +25,24 @@
 	<!-- CSS
   ================================================== -->
 	<!-- Themefisher Icon font -->
-	<link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}">
+	<!-- <link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}"> -->
 	<!-- bootstrap.min css -->
-	<link rel="stylesheet" href="{%static '/plugins/bootstrap/css/bootstrap.min.css'%}">
+	<!-- <link rel="stylesheet" href="{%static '/plugins/bootstrap/css/bootstrap.min.css'%}"> -->
 	<!-- Lightbox.min css -->
-	<link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}">
+	<!-- <link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}"> -->
 	<!-- animation css -->
-	<link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}">
+	<!-- <link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}"> -->
 	<!-- Slick Carousel -->
-	<link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}">
+	<!-- <link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}"> -->
 	<!-- Main Stylesheet -->
+	<link rel="stylesheet" href="{%static '/css/bootstrap.css'%}">
 	<link rel="stylesheet" href="{%static '/css/style.css'%}">
 	<!-- font icon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -48,6 +51,7 @@
   gtag('config', 'G-LVV5M06YY7');
 </script>
 <style>
+	
 	.navbar {
         position: fixed;
         z-index: 1000;
@@ -70,7 +74,7 @@
 	ul li {
         text-decoration: none;
         display: inline;
-
+		font-family: 'Josefin Sans', sans-serif !important;
     }
 	@media only screen and (max-width: 700px) {
         .remove {
@@ -158,8 +162,8 @@ End Fixed Navigation
 			<div class="col-md-12">
 					<!-- section title -->
 					<div class="title text-center">
-						<h2 class="text-light">Our Works</h2>
-						<p class="text-light">Join us And help us remove roadblocks to innovation and create a smarter, better-connected world. Together we can enable what’s next.
+						<h2 class="text-light" style="font-family: 'Josefin Sans', sans-serif !important;">Our Works</h2>
+						<p class="text-light" style="font-family: 'Josefin Sans', sans-serif !important;">Join us And help us remove roadblocks to innovation and create a smarter, better-connected world. Together we can enable what’s next.
 
 							Our mission is to provide smart solutions to clients in order to enhance their business through A.I. technology.
 							
@@ -180,57 +184,11 @@ End Fixed Navigation
 		<div class="row ">
 			<div class="col-md-12">
 				<div class="title text-center">
-					<h2 >Openings</h2><br>
-					<h3>Currently We do not have any Openings </h3>
+					<h2  style="font-family: 'Josefin Sans', sans-serif !important;">Openings</h2><br>
+					<h3 style="font-family: 'Josefin Sans', sans-serif !important;">Currently We do not have any Openings </h3>
 				</div>
 		</div>
-			<!-- <div class="col-lg-12">
-				<div class="accordion" id="accordionExample">
-					<div class="card">
-					  <div class="card-header" id="headingOne">
-						<h2 class="mb-0">
-						  <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-							Collapsible Group Item #1
-						  </button>
-						</h2>
-					  </div>
-				  
-					  <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-						<div class="card-body">
-						  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-						</div>
-					  </div>
-					</div>
-					<div class="card">
-					  <div class="card-header" id="headingTwo">
-						<h2 class="mb-0">
-						  <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-							Collapsible Group Item #2
-						  </button>
-						</h2>
-					  </div>
-					  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-						<div class="card-body">
-						  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-						</div>
-					  </div>
-					</div>
-					<div class="card">
-					  <div class="card-header" id="headingThree">
-						<h2 class="mb-0">
-						  <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-							Collapsible Group Item #3
-						  </button>
-						</h2>
-					  </div>
-					  <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-						<div class="card-body">
-						  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-						</div>
-					  </div>
-					</div>
-				  </div>
-			</div>  -->
+		
 
 		</div> 
 	</div> 
