--- a/templates/retail.html
+++ b/templates/retail.html
@@ -89,7 +89,9 @@
 		* {
 			font-family: 'Josefin Sans', sans-serif;
 		}
-
+		.card-title {
+			color: rgb(18, 138, 236);
+		}
 		.formdiv {
 			/* background-image: url("{%static '/images/map.jpg'%}") !important;*/
 			background-repeat: no-repeat;
