--- a/templates/company.html
+++ b/templates/company.html
@@ -46,6 +46,8 @@
 	<link rel="stylesheet" href="{%static '/css/bootstrap.css'%}">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -58,6 +60,7 @@
 		gtag('config', 'G-LVV5M06YY7');
 	</script>
 	<style>
+		
 		.navbar {
 			position: fixed;
 			z-index: 1000;
@@ -91,6 +94,11 @@
 			.remove {
 				display: none;
 			}
+		}
+		#body{
+			
+			font-family: 'Josefin Sans', sans-serif !important;
+		
 		}
 	</style>
 </head>
@@ -174,8 +182,8 @@ End Fixed Navigation
 				<!-- section title -->
 				<div class="col-12">
 					<div class="title text-center">
-						<h2 class="text-light" data-aos="fade-down" data-aos-duration="1000">We Are AI Based Company</h2>
-						<p class="text-light" data-aos="zoom-in" data-aos-duration="2000">Solving scale AI develops innovative applications by integrating computer
+						<h2 class="text-light" data-aos="fade-down" data-aos-duration="1000" style="font-family: 'Josefin Sans', sans-serif;">We Are AI Based Company</h2>
+						<p class="text-light" data-aos="zoom-in" data-aos-duration="2000" style="font-family: 'Josefin Sans', sans-serif;">Solving scale AI develops innovative applications by integrating computer
 							vision and
 							Deep Learning Models with other systems like ERP, POS, CCTV, and diagnostic
 							software to detect anomalies in production lines, analyze medical images, identify
@@ -203,7 +211,7 @@ Start About Section
 				</div>
 				<div class="col-md-6">
 
-					<p data-aos="zoom-in"data-aos-duration="1000"><b data-aos="fade-down" data-aos-duration="1000">In Healthcare:</b> We have developed a non-contact based system to measure Heart
+					<p data-aos="zoom-in"data-aos-duration="1000" style="font-family: 'Josefin Sans', sans-serif !important;"><b data-aos="fade-down" data-aos-duration="1000">In Healthcare:</b> We have developed a non-contact based system to measure Heart
 						Rate: a real-time application using camera ,Our model helps us to extract heart rate
 						information from facial skin color variation caused by blood circulation <br><br>
 
