--- a/templates/healthcare.html
+++ b/templates/healthcare.html
@@ -59,6 +59,9 @@
 		gtag('config', 'G-LVV5M06YY7');
 	</script>
 	<style>
+		.card-title {
+			color: rgb(18, 138, 236);
+		}
 		.navbar {
 			position: fixed;
 			z-index: 1000;
