--- a/templates/consulting.html
+++ b/templates/consulting.html
@@ -38,7 +38,7 @@
         z-index: 1000;
         left: 0;
         right: 0;
-        padding: 0px;
+        padding: 8px;
 
     }
 
@@ -83,8 +83,8 @@
     }
 
     .showcase {
-        box-shadow: 50px 10px #cac9c9;
-        box-shadow: 0 0 25px 0 rgba(50, 50, 50, .3) inset;
+       /* box-shadow: 50px 10px #cac9c9;*/
+      /*  box-shadow: 0 0 25px 0 rgba(50, 50, 50, .3) inset;*/
     }
 
     .formdiv {
@@ -166,7 +166,8 @@
         box-shadow: 0 1px 5px rgba(133, 133, 133, 0.9);
 
     }
-    *{
+
+    * {
 
         font-family: 'Josefin Sans', sans-serif;
     }
@@ -231,23 +232,27 @@
 
         </div>
         <div class="content ">
-            <h4 style="font-family: 'Josefin Sans', sans-serif;" data-aos="fade-down" data-aos-duration="1000">AI
-                Solutions For</h4>
+            <h4 style="font-family: 'Josefin Sans', sans-serif;" data-aos="fade-down" data-aos-duration="1000">Business
+                in today's world is dominated by the era of data</h4>
             <h1 style="font-size:7vh; font-family: 'Josefin Sans', sans-serif;" data-aos="zoom-in"
-                data-aos-duration="2000">Your Business</h1>
+                data-aos-duration="2000">Are you ready to experince?</h1>
             <!-- <h5 >Highly Tailored IT Design, Development & Security Services.</h5><br><br> -->
-            <button id="videobtn" class="btn btn-outline-warning" style="font-family: 'Josefin Sans', sans-serif;">
-                Free Consultation
+            <button id="videobtn" class="btn btn-warning" style="font-family: 'Josefin Sans', sans-serif;">
+                Get Free consulation Now
+            </button>
+            <button class="btn btn-outline-warning" onclick="location.href='#industry'" style="font-family: 'Josefin Sans', sans-serif;">
+                Know Your Industry
             </button>
 
         </div>
     </section><br>
 
-    <div class="text-center">
-        <h2 data-aos="fade-down">CONSULT US FOR </h2>
+    <div class="text-center my-4">
+        <h1 data-aos="fade-down ">Businesses That have Transformed Operations with AI </h1>
+        <br>
         <div class="border"></div>
-    </div><br>
-    <div class="container">
+    </div>
+    <div class="container" id="industry">
 
         <div class="row text-center  grow " style=" border-radius: 10px;">
             <div class="col-md-6 my-auto p-5">
