--- a/templates/contact.html
+++ b/templates/contact.html
@@ -246,9 +246,9 @@ End Fixed Navigation
 			<div class="col-md-6">
 				<div class="switch-field text-center ">
 					<input type="radio" id="radio-one" name="switch-one" value="1" checked />
-					<label for="radio-one">Hyderabad Office</label>
+					<label for="radio-one">Indore Office</label>
 					<input type="radio" id="radio-two" name="switch-one" value="2" />
-					<label for="radio-two">Indore Office</label>
+					<label for="radio-two">Hyderabad Office</label>
 				</div>
 				<div class="row hyderabad">
 					<div class="col-2 text-right"><img src="{%static '/images/icons/email.png'%}" class="icon-size"
@@ -263,9 +263,8 @@ End Fixed Navigation
 							alt="">
 					</div>
 					<div class="col">
-						2nd Floor, Adviti Nivas PLOT - 26, near RTO Office,
-						Chandragiri
-						Colony, Trimulgherry, Secunderabad, Telangana 500015
+						615, Apollo Premier, Vijay Nagar Sqaure, Indore, Madhya
+						pradesh, India, 452001 &nbsp; &nbsp; &nbsp;
 					</div>
 				</div>
 				<div class="row hyderabad">
@@ -273,7 +272,7 @@ End Fixed Navigation
 							alt="">
 					</div>
 					<div class="col ">
-						+91-7507898930
+						+91-7313510004
 					</div>
 				</div>
 				<!-- INDORE -->
@@ -290,8 +289,10 @@ End Fixed Navigation
 							alt="">
 					</div>
 					<div class="col">
-						615, Apollo Premier, Vijay Nagar Sqaure, Indore, Madhya
-						pradesh, India, 452001 &nbsp; &nbsp; &nbsp;
+						
+						2nd Floor, Adviti Nivas PLOT - 26, near RTO Office,
+						Chandragiri
+						Colony, Trimulgherry, Secunderabad, Telangana 500015
 					</div>
 				</div>
 				<div class="row indore">
@@ -299,7 +300,8 @@ End Fixed Navigation
 							alt="">
 					</div>
 					<div class="col ">
-						+91-7313510004
+						
+						+91-7507898930
 					</div>
 				</div>
 			</div>
